--- a/MVT/Templates/about_us.html
+++ b/MVT/Templates/about_us.html
@@ -9,7 +9,7 @@ About Us
 <div id="about-card" class="card">
     <div class="row g-0">
         <div id="about-img-container" class="col-md-4">
-            <img id="about-img" src="{% static '/img/img_avatar.png' %}" class="img-fluid rounded-start" alt="...">
+            <img id="about-img" src="https://media.licdn.com/dms/image/D4D03AQFQTaz5RNY-TQ/profile-displayphoto-shrink_200_200/0/1675862702583?e=1681344000&v=beta&t=4tuz3IW0EesNJ8hkoMufhuwgPMHKhdW-UAJULN6jo4s" class="img-fluid rounded-start" alt="...">
         </div>
         <div id="about-info" class="col-md-8">
             <div class="card-body">
