--- a/MVT/Templates/users/login.html
+++ b/MVT/Templates/users/login.html
@@ -33,7 +33,7 @@ Login
         </div>
     </div>
     <div class="form-group form-check">
-        <a class= "new"href="/register/">usuario nuevo? registrese aqui</a>
+        <a class= "new"href="{% url 'register' %}">usuario nuevo? registrese aqui</a>
     </div>
     <hr>
     <input class="btn btn-success w-100" type="submit" value="Iniciar Sesion">
