--- a/MVT/Templates/users/logout.html
+++ b/MVT/Templates/users/logout.html
@@ -5,7 +5,7 @@ Logout
 {% endblock %}
 
 {% block content %}
-<h3>sesion cerrada correctamente</h3>
+<h3 class="text-light">sesion cerrada correctamente</h3>
 {% endblock %}
 {% block footer %}
 {% endblock %}
