--- a/MVT/static/css/styleMain.css
+++ b/MVT/static/css/styleMain.css
@@ -3,6 +3,9 @@
 .body{
     font-family: 'Noto Sans', sans-serif;
     background-color: rgb(15 15 15);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 #navbar{
@@ -11,7 +14,10 @@
     position: sticky;
     top: 0;
     z-index: 1;
-    max-height: fit-content;
+}
+#navbar-items{
+    display: flex;
+    max-height: 5rem;
 }
 #navbar-profile-img{
     border-radius: 20%;
@@ -22,12 +28,16 @@
     border-radius: 50%;
     /* mix-blend-mode: color-burn; */
 }
+#search-bar{
+    margin-left:8rem;
+}
 .footer{
     position: sticky;
     bottom: 0;
     z-index: 1;
     background-color: #343a40;
     width: 100%;
+    margin-top: auto;
 }
 #footer-div{
     display: flex;
